force-app/main/default/objects/State_Registration__c/State_Registration__c.object-meta.xml
<CustomObject>
    <label>State Registration</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>State Registration</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>State Registrations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>