force-app/main/default/objects/State_Registration__c/fields/Annual_Report__c.field-meta.xml
<CustomField>
    <fullName>Annual_Report__c</fullName>
    <label>Annual Report</label>
    <type>Date</type>
</CustomField>