force-app/main/default/objects/State_Registration__c/fields/Biennial_Report__c.field-meta.xml
<CustomField>
    <fullName>Biennial_Report__c</fullName>
    <label>Biennial Report</label>
    <length>150</length>
    <type>Text</type>
</CustomField>