force-app/main/default/objects/State_Registration__c/fields/Certificate_of_Good_Standing__c.field-meta.xml
<CustomField>
    <fullName>Certificate_of_Good_Standing__c</fullName>
    <label>Certificate of Good Standing</label>
    <type>Date</type>
</CustomField>