force-app/main/default/objects/State_Registration__c/fields/DOS_ID__c.field-meta.xml
<CustomField>
    <fullName>DOS_ID__c</fullName>
    <label>DOS ID</label>
    <length>150</length>
    <type>Text</type>
</CustomField>