force-app/main/default/objects/State_Registration__c/fields/Entity__c.field-meta.xml
<CustomField>
    <fullName>Entity__c</fullName>
    <label>Entity</label>
    <referenceTo>Entity__c</referenceTo>
    <relationshipLabel>State Registrations</relationshipLabel>
    <relationshipName>State_Registrations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>