force-app/main/default/objects/State_Registration__c/fields/Foreign_Registration__c.field-meta.xml
<CustomField>
    <fullName>Foreign_Registration__c</fullName>
    <label>Foreign Registration</label>
    <length>150</length>
    <type>Text</type>
</CustomField>