force-app/main/default/objects/State_Registration__c/fields/Formation__c.field-meta.xml
<CustomField>
    <fullName>Formation__c</fullName>
    <label>Formation</label>
    <type>Date</type>
</CustomField>