force-app/main/default/objects/State_Registration__c/fields/Login__c.field-meta.xml
<CustomField>
    <fullName>Login__c</fullName>
    <label>Login</label>
    <length>150</length>
    <type>Text</type>
</CustomField>