force-app/main/default/objects/State_Registration__c/fields/Pin__c.field-meta.xml
<CustomField>
    <fullName>Pin__c</fullName>
    <label>Pin</label>
    <length>150</length>
    <type>Text</type>
</CustomField>