force-app/main/default/objects/State_Registration__c/fields/Registration_Details__c.field-meta.xml
<CustomField>
    <fullName>Registration_Details__c</fullName>
    <label>Registration Details</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>