force-app/main/default/objects/State_Registration__c/fields/SOSID__c.field-meta.xml
<CustomField>
    <fullName>SOSID__c</fullName>
    <label>SOSID</label>
    <length>150</length>
    <type>Text</type>
</CustomField>