force-app/main/default/objects/State_Registration__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <label>State</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>State_abbreviations</valueSetName>
        
        </valueSet>
</CustomField>