force-app/main/default/objects/State_Registration__c/fields/State_Registration_Required__c.field-meta.xml
<CustomField>
    <fullName>State_Registration_Required__c</fullName>
    <description>A picklist to identify if state registration is required.</description>
    <label>State Registration Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>